--- a/views/includes/user/menu.ejs
+++ b/views/includes/user/menu.ejs
@@ -10,5 +10,5 @@
 
     <div class="flex justify-end space-x-4">
         <a href="/user/polls/create" class="btn btn-primary">Create Poll</a>
-        <a href="/" class="btn btn-secondary">View Polls</a>
+        <a href="/polls" class="btn btn-secondary">View Polls</a>
     </div>
