--- a/views/user/polls/index.ejs
+++ b/views/user/polls/index.ejs
@@ -61,7 +61,7 @@
                     class="fixed inset-0 bg-black bg-opacity-50 hidden transition-opacity duration-300 ease-in-out">
                     <div class="flex items-center justify-center h-screen">
                         <div class="bg-white p-8 rounded-md">
-                            <form id="deletePollForm" method="POST" action="/user/polls/<%= id %>/delete">
+                            <form id="deletePollForm" method="POST">
                                 <input type="hidden" id="pollIdInput" name="pollId">
                                 <p class="text-xl font-semibold mb-4">Are you sure you want to delete this poll?</p>
                                 <button type="submit" class="btn hover:!bg-red-500/90 bg-red-500 text-white">Delete</button>
@@ -76,6 +76,7 @@
                         // Set the poll ID in the modal form and display it
                         const modal = document.getElementById('deleteConfirmationModal');
                         const form = modal.querySelector('#deletePollForm');
+                        form.setAttribute('action', `/user/polls/${pollId}/delete`)
                         form.querySelector('#pollIdInput').value = pollId;
                         modal.classList.remove('hidden');
                     }
