--- a/views/polls/view.ejs
+++ b/views/polls/view.ejs
@@ -8,58 +8,120 @@
 
                 <div class="space-y-2">
                     <div class="rounded-xl w-full h-60 overflow-hidden">
-                        <img src="/images/poll-image.jpg" alt="Poll Image" class="w-full h-full object-cover object-center">
+                        <img src="/images/poll-image.jpg" alt="Poll Image"
+                            class="w-full h-full object-cover object-center">
                     </div>
-                    <p class="italic">Ends <%= poll.endDate %></p>
-                </div>
+                    <div
+                        class="flex flex-col space-y-2 sm:space-y-0 sm:flex-row sm:justify-between sm:space-x-4 items-center">
+                        <p class="italic">Ends <%= poll.endDate %>
+                        </p>
 
-                <h1 class="text-3xl"><%= poll.question %></h1>
+                        <div>
+                            <!-- Social Media Sharing Buttons -->
+                            <div class="flex space-x-4">
+                                <!-- Twitter Share Button -->
+                                <a href="https://twitter.com/intent/tweet?url=<%= encodeURI(`${app.url}/polls/${poll._id}`) %>&text=<%= encodeURI('Check out this poll: ' + poll.question) %>"
+                                    target="_blank" rel="noopener noreferrer" class="rounded-full p-2 border">
+                                    <img src="/images/twitter.svg" alt="Twitter"
+                                        class="w-8 object-cover object-center" />
+                                </a>
 
-                <div class="flex space-x-4 items-center justify-between">
+                                <!-- Facebook Share Button -->
+                                <a href="https://www.facebook.com/sharer/sharer.php?u=<%= encodeURI(`${app.url}/polls/${poll._id}`) %>"
+                                    target="_blank" rel="noopener noreferrer" class="rounded-full p-2 border">
+                                    <img src="/images/facebook.svg" alt="Facebook"
+                                        class="w-8 object-cover object-center" />
+                                </a>
+
+                                <!-- WhatsApp Share Button -->
+                                <a href="whatsapp://send?text=<%= encodeURI('Check out this poll: ' + poll.question + ' ' + `${app.url}/polls/${poll._id}`) %>"
+                                    target="_blank" rel="noopener noreferrer" class="rounded-full p-2 border">
+                                    <img src="/images/whatsapp.svg" alt="Whatsapp"
+                                        class="w-8 object-cover object-center" />
+                                </a>
+
+                                <!-- Native Share Link Button -->
+                                <button onclick="shareLink('<%= `${app.url}/polls/${poll._id}` %>')"
+                                    class="rounded-full p-2 border">
+                                    <img src="/images/share.svg" alt="Share" class="w-8 object-cover object-center" />
+                                </button>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <h1 class="text-3xl">
+                        <%= poll.question %>
+                    </h1>
+
+                    <div
+                        class="flex flex-col space-y-2 sm:space-y-0 sm:flex-row sm:justify-between sm:space-x-4 sm:items-center">
 
                         <div class="flex space-x-2 items-center">
                             <img src="https://ui-avatars.com/api/?name=F+M&color=FFFFFF&background=590D82"
                                 alt="Freeman Madudili" class="w-14 h-14 rounded-full">
 
-                            <span class="font-light">Created by <strong><%= poll.user.fullName %></strong></span>
+                            <span class="font-light">Created by <strong>
+                                    <%= poll.user.fullName %>
+                                </strong></span>
                         </div>
 
-                        <div class="flex flex-col items-end space-y-2">
+                        <div class="flex flex-col sm:items-end space-y-2">
                             <p>Total Votes: <strong>50</strong></p>
-                                <a href="/polls/<%= poll._id %>/voters" class="btn">Voters / Results</a>
+                            <a href="/polls/<%= poll._id %>/voters" class="btn">Voters / Results</a>
                         </div>
+                    </div>
+
+
+                    <div class="mt-8">
+                        <h2 class="text-xl font-semibold mb-4">Select an option to vote:</h2>
+
+                        <div class="flex flex-col space-y-4" id="pollOptions">
+                            <% for (let option of poll.options) { %>
+                                <div class="poll-option bg-white border rounded p-4 cursor-pointer transition duration-300 ease-in-out flex justify-between"
+                                    onclick="selectOption(this)">
+                                    <span>
+                                        <%= option %>
+                                    </span>
+                                    <span>(13 votes)</span>
+                                </div>
+                                <% } %>
+
+                        </div>
+                    </div>
+
                 </div>
 
-                
-<div class="mt-8">
-    <h2 class="text-xl font-semibold mb-4">Select an option to vote:</h2>
-  
-    <div class="flex flex-col space-y-4" id="pollOptions">
-        <% for (let option of poll.options) { %>
-        <div class="poll-option bg-white border rounded p-4 cursor-pointer transition duration-300 ease-in-out flex justify-between" onclick="selectOption(this)">
-            <span><%= option %></span>
-            <span>(13 votes)</span>
-        </div>
-      <% } %>
-      
-    </div>
-  </div>
+                <script>
 
-            </div>
+                    const selectOption = (option) => {
+                        // Remove highlight from all options
+                        const options = document.querySelectorAll('.poll-option');
+                        options.forEach((opt) => opt.classList.remove('bg-primary', 'text-white'));
 
-            <script>
-                
-                const selectOption = (option) => {
-                    // Remove highlight from all options
-                    const options = document.querySelectorAll('.poll-option');
-                    options.forEach((opt) => opt.classList.remove('bg-primary', 'text-white'));
-                  
-                    // Highlight the clicked option
-                    option.classList.add('bg-primary', 'text-white');
-                  };
-                  
-                  
-            </script>
+                        // Highlight the clicked option
+                        option.classList.add('bg-primary', 'text-white');
+                    };
+
+                    const shareLink = async (url) => {
+                        if (navigator.share) {
+                            try {
+                                await navigator.share({
+                                    title: 'Share Poll',
+                                    text: 'Check out this poll:',
+                                    url: url,
+                                });
+                            } catch (error) {
+                                console.error('Error sharing:', error);
+                            }
+                        } else {
+                            // Fallback for browsers that do not support the Web Share API
+                            alert('Your browser does not support the native share dialog. You can manually copy the link.');
+                        }
+                    }
+
+
+                </script>
 
     </body>
 
