--- a/views/user/polls/edit.ejs
+++ b/views/user/polls/edit.ejs
@@ -64,13 +64,13 @@
                             <div class="grid grid-cols-2 gap-4">
                                 <div class="form-control">
                                     <label for="startDate">Start Date:</label>
-                                    <input type="date" id="startDate" name="startDate"
+                                    <input type="datetime-local" id="startDate" name="startDate"
                                         value="<%= formData?.startDate %>" readonly>
                                 </div>
 
                                 <div class="form-control">
                                     <label for="endDate">End Date:</label>
-                                    <input type="date" id="endDate" name="endDate" required
+                                    <input type="datetime-local" id="endDate" name="endDate" required
                                         value="<%= formData?.endDate %>" min="<%= formData?.startDate %>">
                                 </div>
                             </div>
