--- a/views/polls/view.ejs
+++ b/views/polls/view.ejs
@@ -81,7 +81,7 @@
                                 <div class="poll-option bg-white border rounded p-4 cursor-pointer transition duration-300 ease-in-out flex justify-between"
                                     onclick="selectOption(this)">
                                     <span>
-                                        <%= option %>
+                                        <%= option.text %>
                                     </span>
                                     <span>(13 votes)</span>
                                 </div>
