--- a/views/polls/view.ejs
+++ b/views/polls/view.ejs
@@ -67,7 +67,7 @@
                         </div>
 
                         <div class="flex flex-col sm:items-end space-y-2">
-                            <p>Total Votes: <strong>50</strong></p>
+                            <p>Total Votes: <strong><%= poll.votes.length %></strong></p>
                             <a href="/polls/<%= poll._id %>/voters" class="btn">Voters / Results</a>
                         </div>
                     </div>
@@ -80,12 +80,12 @@
 
                         <div class="flex flex-col space-y-4" id="pollOptions">
                             <% poll.options.forEach((option, index) => { %>
-                                <button id="option-<%= index %>" class="poll-option bg-white border rounded p-4 cursor-pointer transition duration-300 ease-in-out flex justify-between"
+                                <button id="option-<%= index %>" class="poll-option bg-white border rounded p-4 cursor-pointer transition duration-300 ease-in-out flex justify-between <% if (userVote.option === option) { %> !bg-primary text-white <% } %>"
                                     onclick="selectOption('<%= poll._id %>', '<%= option %>', '<%= index %>')">
                                     <span>
                                         <%= option %>
                                     </span>
-                                    <span>(13 votes)</span>
+                                    <span>(<%= optionVotes[option].count %> votes)</span>
                                 </button>
                                 <% }) %>
 
@@ -109,10 +109,10 @@
                             if (response.ok) {
                                 // Update the UI to reflect the selected option
                                 const options = document.querySelectorAll('.poll-option');
-                                options.forEach((opt) => opt.classList.remove('bg-primary', 'text-white'));
+                                options.forEach((opt) => opt.classList.remove('!bg-primary', 'text-white'));
                 
                                 const selectedOption = document.getElementById(`option-${optionId}`);
-                                selectedOption.classList.add('bg-primary', 'text-white');
+                                selectedOption.classList.add('!bg-primary', 'text-white');
 
                             } else {
                                 errorMessage.setAttribute('class', 'mt-4 px-4 py-2 bg-red-100 rounded-full border-red-500 text-red-700')
