--- a/views/includes/guest/header.ejs
+++ b/views/includes/guest/header.ejs
@@ -53,4 +53,7 @@
         }
       }
     </style>
+
+    <script src="/js/post-data.js"></script>
+    <script src="/js/utilities.js"></script>
 </head>
